fix: large project card text color not visible dark

--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -32,7 +32,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   height: 150px;
-  color: var(--white);
+  color: white;
   position: relative;
   border-radius: 32px;
 
